// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BuyFilterAndSort should render correctly 1`] = `
<View
  style={
    {
      "borderRadius": 16,
      "marginLeft": 24,
      "marginRight": 24,
      "overflow": "hidden",
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#FEEDE5",
          "gap": 12,
          "paddingBottom": 24,
          "paddingLeft": 24,
          "paddingRight": 24,
          "paddingTop": 16,
        },
        [
          undefined,
          {
            "alignItems": "stretch",
          },
        ],
      ]
    }
  >
    <View
      style={
        {
          "flexShrink": 1,
          "gap": 16,
          "width": "100%",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "alignSelf": "stretch",
            "flexDirection": "row",
            "gap": 8,
            "justifyContent": "center",
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            [
              {
                "color": "#2B1911",
                "fontFamily": "Baloo2-Regular",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 24,
              },
              {
                "fontFamily": "Baloo2-Bold",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 26,
              },
              false,
            ]
          }
        >
          filter
        </Text>
        <View
          style={
            [
              {
                "backgroundColor": "#EAE3DF",
                "flexShrink": 1,
                "height": 1,
                "width": "100%",
              },
              undefined,
            ]
          }
        />
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "alignSelf": "stretch",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 4,
              "opacity": 1,
            }
          }
        >
          <test-file-stub
            fill="#9F8C82"
            style={
              [
                {
                  "height": 24,
                  "width": 24,
                },
                undefined,
              ]
            }
          />
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                [
                  {
                    "fontFamily": "Baloo2-SemiBold",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 28,
                  },
                  {
                    "color": "#BAADA7",
                  },
                ],
                false,
              ]
            }
          >
            max premium
          </Text>
        </View>
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 12,
                "flexDirection": "row",
                "height": 38,
                "overflow": "hidden",
                "paddingBottom": 12,
                "paddingLeft": 8,
                "paddingRight": 8,
                "paddingTop": 12,
                "width": 92,
              },
              {
                "backgroundColor": "#FFFCFA",
                "borderColor": "#7D675E",
                "borderWidth": 1,
              },
            ]
          }
        >
          <TextInput
            keyboardType="decimal-pad"
            onChangeText={[Function]}
            placeholder="20.00"
            placeholderTextColor="#EAE3DF"
            style={
              {
                "color": "#2B1911",
                "flexGrow": 1,
                "fontFamily": "Baloo2-Regular",
                "fontSize": 18,
                "height": 38,
                "letterSpacing": 0.18,
                "lineHeight": 29.25,
                "paddingBottom": 0,
                "paddingTop": 0,
                "textAlign": "center",
              }
            }
            value=""
          />
          <View
            style={
              {
                "paddingBottom": 1,
              }
            }
          >
            <test-file-stub
              fill="#2B1911"
              style={
                [
                  {
                    "height": 20,
                    "width": 20,
                  },
                  undefined,
                ]
              }
            />
          </View>
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "alignSelf": "stretch",
            "flexDirection": "row",
            "gap": 8,
            "justifyContent": "center",
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            [
              {
                "color": "#2B1911",
                "fontFamily": "Baloo2-Regular",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 24,
              },
              {
                "fontFamily": "Baloo2-Bold",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 26,
              },
              false,
            ]
          }
        >
          sort matches by
        </Text>
        <View
          style={
            [
              {
                "backgroundColor": "#EAE3DF",
                "flexShrink": 1,
                "height": 1,
                "width": "100%",
              },
              undefined,
            ]
          }
        />
      </View>
      <View
        style={
          [
            {
              "gap": 8,
            },
            undefined,
          ]
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#FEEDE5",
              "borderColor": "#F56522",
              "borderRadius": 12,
              "borderWidth": 2,
              "flexDirection": "row",
              "justifyContent": "space-between",
              "opacity": 1,
              "paddingBottom": 8,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 8,
              "width": "100%",
            }
          }
        >
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                {
                  "flexBasis": "0%",
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "fontFamily": "Baloo2-SemiBold",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 28,
                },
                false,
              ]
            }
          >
            best reputation first
          </Text>
          <test-file-stub
            fill="#F56522"
            style={
              [
                {
                  "height": 24,
                  "width": 24,
                },
                {
                  "height": 20,
                  "width": 20,
                },
              ]
            }
          />
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#FEEDE5",
              "borderColor": "transparent",
              "borderRadius": 12,
              "borderWidth": 2,
              "flexDirection": "row",
              "justifyContent": "space-between",
              "opacity": 1,
              "paddingBottom": 8,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 8,
              "width": "100%",
            }
          }
        >
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                {
                  "flexBasis": "0%",
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "fontFamily": "Baloo2-SemiBold",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 28,
                },
                false,
              ]
            }
          >
            highest amount first
          </Text>
          <test-file-stub
            fill="#9F8C82"
            style={
              [
                {
                  "height": 24,
                  "width": 24,
                },
                {
                  "height": 20,
                  "width": 20,
                },
              ]
            }
          />
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#FEEDE5",
              "borderColor": "transparent",
              "borderRadius": 12,
              "borderWidth": 2,
              "flexDirection": "row",
              "justifyContent": "space-between",
              "opacity": 1,
              "paddingBottom": 8,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 8,
              "width": "100%",
            }
          }
        >
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                {
                  "flexBasis": "0%",
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "fontFamily": "Baloo2-SemiBold",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 28,
                },
                false,
              ]
            }
          >
            lowest premium first
          </Text>
          <test-file-stub
            fill="#9F8C82"
            style={
              [
                {
                  "height": 24,
                  "width": 24,
                },
                {
                  "height": 20,
                  "width": 20,
                },
              ]
            }
          />
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "stretch",
          "backgroundColor": "#F56522",
          "flexDirection": "row",
          "justifyContent": "space-between",
        },
        undefined,
      ]
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "flexGrow": 1,
          "gap": 4,
          "opacity": 1,
          "paddingBottom": 8,
          "paddingLeft": 24,
          "paddingRight": 24,
          "paddingTop": 8,
        }
      }
    >
      <test-file-stub
        fill="#FFFCFA"
        style={
          [
            {
              "height": 16,
              "width": 16,
            },
            undefined,
          ]
        }
      />
      <Text
        allowFontScaling={false}
        style={
          [
            {
              "color": "#2B1911",
              "fontFamily": "Baloo2-Regular",
              "fontSize": 16,
              "letterSpacing": 0.16,
              "lineHeight": 24,
            },
            [
              {
                "color": "#FFFCFA",
                "fontFamily": "Baloo2-SemiBold",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 28,
              },
              undefined,
            ],
            false,
          ]
        }
      >
        close
      </Text>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "flexDirection": "row-reverse",
          "flexGrow": 1,
          "gap": 4,
          "opacity": 1,
          "paddingBottom": 8,
          "paddingLeft": 24,
          "paddingRight": 24,
          "paddingTop": 8,
        }
      }
    >
      <test-file-stub
        fill="#FFFCFA"
        style={
          [
            {
              "height": 16,
              "width": 16,
            },
            undefined,
          ]
        }
      />
      <Text
        allowFontScaling={false}
        style={
          [
            {
              "color": "#2B1911",
              "fontFamily": "Baloo2-Regular",
              "fontSize": 16,
              "letterSpacing": 0.16,
              "lineHeight": 24,
            },
            [
              {
                "color": "#FFFCFA",
                "fontFamily": "Baloo2-SemiBold",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 28,
              },
              undefined,
            ],
            false,
          ]
        }
      >
        apply
      </Text>
    </View>
  </View>
</View>
`;

exports[`BuyFilterAndSort should show the loading indicator after the apply button is pressed 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -693,11 +693,11 @@
      <View
        accessibilityState={
          Object {
            "busy": undefined,
            "checked": undefined,
-           "disabled": false,
+           "disabled": true,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
@@ -730,21 +730,43 @@
            "paddingRight": 24,
            "paddingTop": 8,
          }
        }
      >
-       <test-file-stub
-         fill="#FFFCFA"
+       <LottieAnimationView
+         autoPlay={true}
+         cacheComposition={true}
+         colorFilters={
+           Array [
+             Object {
+               "color": 4294966522,
+               "keypath": "main",
+             },
+           ]
+         }
+         enableMergePathsAndroidForKitKatAndAbove={false}
+         loop={true}
+         onAnimationFinish={[Function bound ]}
+         progress={0}
+         resizeMode="contain"
+         sourceJson="{\\"v\\":\\"5.1.15\\",\\"fr\\":60,\\"ip\\":0,\\"op\\":141,\\"w\\":120,\\"h\\":120,\\"nm\\":\\"Composição 1\\",\\"ddd\\":0,\\"assets\\":[],\\"layers\\":[{\\"ddd\\":0,\\"ind\\":0,\\"ty\\":4,\\"nm\\":\\"main\\",\\"sr\\":1,\\"ks\\":{\\"o\\":{\\"a\\":0,\\"k\\":100,\\"ix\\":11},\\"r\\":{\\"a\\":1,\\"k\\":[{\\"i\\":{\\"x\\":[0.833],\\"y\\":[0.833]},\\"o\\":{\\"x\\":[0.167],\\"y\\":[0.167]},\\"n\\":[\\"0p833_0p833_0p167_0p167\\"],\\"t\\":0,\\"s\\":[0],\\"e\\":[1080]},{\\"t\\":180}],\\"ix\\":10},\\"p\\":{\\"a\\":0,\\"k\\":[60,60,0],\\"ix\\":2},\\"a\\":{\\"a\\":0,\\"k\\":[-14.604,-15.104,0],\\"ix\\":1},\\"s\\":{\\"a\\":0,\\"k\\":[100,100,100],\\"ix\\":6}},\\"ao\\":0,\\"shapes\\":[{\\"ty\\":\\"gr\\",\\"it\\":[{\\"d\\":1,\\"ty\\":\\"el\\",\\"s\\":{\\"a\\":0,\\"k\\":[106.793,106.793],\\"ix\\":2},\\"p\\":{\\"a\\":0,\\"k\\":[0,0],\\"ix\\":3},\\"nm\\":\\"Caminho da elipse 1\\",\\"mn\\":\\"ADBE Vector Shape - Ellipse\\",\\"hd\\":false},{\\"ty\\":\\"st\\",\\"c\\":{\\"a\\":0,\\"k\\":[1,1,1,1],\\"ix\\":3},\\"o\\":{\\"a\\":0,\\"k\\":100,\\"ix\\":4},\\"w\\":{\\"a\\":0,\\"k\\":11,\\"ix\\":5},\\"lc\\":2,\\"lj\\":1,\\"ml\\":4,\\"nm\\":\\"Traçado 1\\",\\"mn\\":\\"ADBE Vector Graphic - Stroke\\",\\"hd\\":false},{\\"ty\\":\\"tr\\",\\"p\\":{\\"a\\":0,\\"k\\":[-14.604,-15.104],\\"ix\\":2},\\"a\\":{\\"a\\":0,\\"k\\":[0,0],\\"ix\\":1},\\"s\\":{\\"a\\":0,\\"k\\":[100,100],\\"ix\\":3},\\"r\\":{\\"a\\":0,\\"k\\":0,\\"ix\\":6},\\"o\\":{\\"a\\":0,\\"k\\":100,\\"ix\\":7},\\"sk\\":{\\"a\\":0,\\"k\\":0,\\"ix\\":4},\\"sa\\":{\\"a\\":0,\\"k\\":0,\\"ix\\":5},\\"nm\\":\\"Transformar\\"}],\\"nm\\":\\"Elipse 1\\",\\"np\\":3,\\"cix\\":2,\\"ix\\":1,\\"mn\\":\\"ADBE Vector Group\\",\\"hd\\":false},{\\"ty\\":\\"tm\\",\\"s\\":{\\"a\\":1,\\"k\\":[{\\"i\\":{\\"x\\":[0.833],\\"y\\":[0.833]},\\"o\\":{\\"x\\":[0.167],\\"y\\":[0.167]},\\"n\\":[\\"0p833_0p833_0p167_0p167\\"],\\"t\\":0,\\"s\\":[0],\\"e\\":[0]},{\\"i\\":{\\"x\\":[0.833],\\"y\\":[0.833]},\\"o\\":{\\"x\\":[0.167],\\"y\\":[0.167]},\\"n\\":[\\"0p833_0p833_0p167_0p167\\"],\\"t\\":60,\\"s\\":[0],\\"e\\":[67]},{\\"t\\":119}],\\"ix\\":1},\\"e\\":{\\"a\\":1,\\"k\\":[{\\"i\\":{\\"x\\":[0.833],\\"y\\":[0.833]},\\"o\\":{\\"x\\":[0.167],\\"y\\":[0.167]},\\"n\\":[\\"0p833_0p833_0p167_0p167\\"],\\"t\\":0,\\"s\\":[3],\\"e\\":[70]},{\\"i\\":{\\"x\\":[0.833],\\"y\\":[0.833]},\\"o\\":{\\"x\\":[0.167],\\"y\\":[0.167]},\\"n\\":[\\"0p833_0p833_0p167_0p167\\"],\\"t\\":60,\\"s\\":[70],\\"e\\":[70]},{\\"t\\":119}],\\"ix\\":2},\\"o\\":{\\"a\\":0,\\"k\\":0,\\"ix\\":3},\\"m\\":1,\\"ix\\":2,\\"nm\\":\\"Aparar caminhos 1\\",\\"mn\\":\\"ADBE Vector Filter - Trim\\",\\"hd\\":false}],\\"ip\\":0,\\"op\\":900,\\"st\\":0,\\"bm\\":0}],\\"chars\\":[],\\"markers\\":[]}"
+         speed={1}
          style={
            Array [
              Object {
+               "height": 80,
+               "width": 80,
+             },
+             Object {
                "height": 16,
                "width": 16,
              },
-             undefined,
            ]
          }
+         textFiltersAndroid={Array []}
+         textFiltersIOS={Array []}
+         useNativeLooping={false}
        />
        <Text
          allowFontScaling={false}
          style={
            Array [
@@ -767,10 +789,10 @@
              ],
              false,
            ]
          }
        >
-         apply
+         loading...
        </Text>
      </View>
    </View>
  </View>"
`;

exports[`BuyFilterAndSort should use the global preferences as defaults when the offer is undefined 1`] = `
<View
  style={
    {
      "borderRadius": 16,
      "marginLeft": 24,
      "marginRight": 24,
      "overflow": "hidden",
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#FEEDE5",
          "gap": 12,
          "paddingBottom": 24,
          "paddingLeft": 24,
          "paddingRight": 24,
          "paddingTop": 16,
        },
        [
          undefined,
          {
            "alignItems": "stretch",
          },
        ],
      ]
    }
  >
    <View
      style={
        {
          "flexShrink": 1,
          "gap": 16,
          "width": "100%",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "alignSelf": "stretch",
            "flexDirection": "row",
            "gap": 8,
            "justifyContent": "center",
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            [
              {
                "color": "#2B1911",
                "fontFamily": "Baloo2-Regular",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 24,
              },
              {
                "fontFamily": "Baloo2-Bold",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 26,
              },
              false,
            ]
          }
        >
          filter
        </Text>
        <View
          style={
            [
              {
                "backgroundColor": "#EAE3DF",
                "flexShrink": 1,
                "height": 1,
                "width": "100%",
              },
              undefined,
            ]
          }
        />
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "alignSelf": "stretch",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 4,
              "opacity": 1,
            }
          }
        >
          <test-file-stub
            fill="#9F8C82"
            style={
              [
                {
                  "height": 24,
                  "width": 24,
                },
                undefined,
              ]
            }
          />
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                [
                  {
                    "fontFamily": "Baloo2-SemiBold",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 28,
                  },
                  {
                    "color": "#BAADA7",
                  },
                ],
                false,
              ]
            }
          >
            max premium
          </Text>
        </View>
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 12,
                "flexDirection": "row",
                "height": 38,
                "overflow": "hidden",
                "paddingBottom": 12,
                "paddingLeft": 8,
                "paddingRight": 8,
                "paddingTop": 12,
                "width": 92,
              },
              {
                "backgroundColor": "#FFFCFA",
                "borderColor": "#7D675E",
                "borderWidth": 1,
              },
            ]
          }
        >
          <TextInput
            keyboardType="decimal-pad"
            onChangeText={[Function]}
            placeholder="20.00"
            placeholderTextColor="#EAE3DF"
            style={
              {
                "color": "#2B1911",
                "flexGrow": 1,
                "fontFamily": "Baloo2-Regular",
                "fontSize": 18,
                "height": 38,
                "letterSpacing": 0.18,
                "lineHeight": 29.25,
                "paddingBottom": 0,
                "paddingTop": 0,
                "textAlign": "center",
              }
            }
            value=""
          />
          <View
            style={
              {
                "paddingBottom": 1,
              }
            }
          >
            <test-file-stub
              fill="#2B1911"
              style={
                [
                  {
                    "height": 20,
                    "width": 20,
                  },
                  undefined,
                ]
              }
            />
          </View>
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "alignSelf": "stretch",
            "flexDirection": "row",
            "gap": 8,
            "justifyContent": "center",
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            [
              {
                "color": "#2B1911",
                "fontFamily": "Baloo2-Regular",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 24,
              },
              {
                "fontFamily": "Baloo2-Bold",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 26,
              },
              false,
            ]
          }
        >
          sort matches by
        </Text>
        <View
          style={
            [
              {
                "backgroundColor": "#EAE3DF",
                "flexShrink": 1,
                "height": 1,
                "width": "100%",
              },
              undefined,
            ]
          }
        />
      </View>
      <View
        style={
          [
            {
              "gap": 8,
            },
            undefined,
          ]
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#FEEDE5",
              "borderColor": "#F56522",
              "borderRadius": 12,
              "borderWidth": 2,
              "flexDirection": "row",
              "justifyContent": "space-between",
              "opacity": 1,
              "paddingBottom": 8,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 8,
              "width": "100%",
            }
          }
        >
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                {
                  "flexBasis": "0%",
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "fontFamily": "Baloo2-SemiBold",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 28,
                },
                false,
              ]
            }
          >
            best reputation first
          </Text>
          <test-file-stub
            fill="#F56522"
            style={
              [
                {
                  "height": 24,
                  "width": 24,
                },
                {
                  "height": 20,
                  "width": 20,
                },
              ]
            }
          />
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#FEEDE5",
              "borderColor": "transparent",
              "borderRadius": 12,
              "borderWidth": 2,
              "flexDirection": "row",
              "justifyContent": "space-between",
              "opacity": 1,
              "paddingBottom": 8,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 8,
              "width": "100%",
            }
          }
        >
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                {
                  "flexBasis": "0%",
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "fontFamily": "Baloo2-SemiBold",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 28,
                },
                false,
              ]
            }
          >
            highest amount first
          </Text>
          <test-file-stub
            fill="#9F8C82"
            style={
              [
                {
                  "height": 24,
                  "width": 24,
                },
                {
                  "height": 20,
                  "width": 20,
                },
              ]
            }
          />
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#FEEDE5",
              "borderColor": "transparent",
              "borderRadius": 12,
              "borderWidth": 2,
              "flexDirection": "row",
              "justifyContent": "space-between",
              "opacity": 1,
              "paddingBottom": 8,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 8,
              "width": "100%",
            }
          }
        >
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                {
                  "flexBasis": "0%",
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "fontFamily": "Baloo2-SemiBold",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 28,
                },
                false,
              ]
            }
          >
            lowest premium first
          </Text>
          <test-file-stub
            fill="#9F8C82"
            style={
              [
                {
                  "height": 24,
                  "width": 24,
                },
                {
                  "height": 20,
                  "width": 20,
                },
              ]
            }
          />
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "stretch",
          "backgroundColor": "#F56522",
          "flexDirection": "row",
          "justifyContent": "space-between",
        },
        undefined,
      ]
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "flexGrow": 1,
          "gap": 4,
          "opacity": 1,
          "paddingBottom": 8,
          "paddingLeft": 24,
          "paddingRight": 24,
          "paddingTop": 8,
        }
      }
    >
      <test-file-stub
        fill="#FFFCFA"
        style={
          [
            {
              "height": 16,
              "width": 16,
            },
            undefined,
          ]
        }
      />
      <Text
        allowFontScaling={false}
        style={
          [
            {
              "color": "#2B1911",
              "fontFamily": "Baloo2-Regular",
              "fontSize": 16,
              "letterSpacing": 0.16,
              "lineHeight": 24,
            },
            [
              {
                "color": "#FFFCFA",
                "fontFamily": "Baloo2-SemiBold",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 28,
              },
              undefined,
            ],
            false,
          ]
        }
      >
        close
      </Text>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "flexDirection": "row-reverse",
          "flexGrow": 1,
          "gap": 4,
          "opacity": 1,
          "paddingBottom": 8,
          "paddingLeft": 24,
          "paddingRight": 24,
          "paddingTop": 8,
        }
      }
    >
      <test-file-stub
        fill="#FFFCFA"
        style={
          [
            {
              "height": 16,
              "width": 16,
            },
            undefined,
          ]
        }
      />
      <Text
        allowFontScaling={false}
        style={
          [
            {
              "color": "#2B1911",
              "fontFamily": "Baloo2-Regular",
              "fontSize": 16,
              "letterSpacing": 0.16,
              "lineHeight": 24,
            },
            [
              {
                "color": "#FFFCFA",
                "fontFamily": "Baloo2-SemiBold",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 28,
              },
              undefined,
            ],
            false,
          ]
        }
      >
        apply
      </Text>
    </View>
  </View>
</View>
`;

exports[`BuyFilterAndSort should use the offer maxPremium as the default value for the maxPremium input 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -161,11 +161,11 @@
                "opacity": 1,
              }
            }
          >
            <test-file-stub
-             fill="#9F8C82"
+             fill="#F56522"
              style={
                Array [
                  Object {
                    "height": 24,
                    "width": 24,
@@ -190,13 +190,11 @@
                      "fontFamily": "Baloo2-SemiBold",
                      "fontSize": 16,
                      "letterSpacing": 0.16,
                      "lineHeight": 28,
                    },
-                   Object {
-                     "color": "#BAADA7",
-                   },
+                   false,
                  ],
                  false,
                ]
              }
            >
@@ -243,11 +241,11 @@
                  "paddingBottom": 0,
                  "paddingTop": 0,
                  "textAlign": "center",
                }
              }
-             value=""
+             value="0.5"
            />
            <View
              style={
                Object {
                  "paddingBottom": 1,"
`;
